v4.7.0
- Library:
	- Maintenance: makefile expanded (commitavg-verbose, check-pythonversion, check-requirements, update-codecoverage).
- Documentation:
	- Feature: updated to v4.7.0.

v4.6.0
- Library:
	- Feature: added support for GANTT charts.
	- Feature: centralized and expanded logging capabilities via TTLogger.
- Documentation:
	- Feature: updated to v4.6.0.

v4.5.0
- Library:
	- Feature: added support for splitting the "by month" Markdown table in clusters, so that it looks better on Github (BYMDFManager).
	- Maintenance: makefile updated and expanded (compile-*, unittest-*, codemetrics-*, ..).
- Documentation:
	- Feature: updated to v4.5.0.

v4.0.0 - BREAKING CHANGES
- Application:
	- Feature: re-structured the whole architecture to simplify usage and future expansions.
	- Maintenance: makefile now supports "*tests.py" in "type*"" targets and "tryinstall-concise" in "all-concise".
- Documentation:
	- Feature: updated to v4.0.0.

v3.9.0
- Library:
	- Feature: makefile added.
	- Bugfix: types fixed according to mypy analysis.
	- Maintenance: dependency update (nwshared v1.7.0 => v1.8.0, nwpackageversions v1.6.0 => v1.8.0).
- Documentation:
	- Feature: updated to v3.9.0.

v3.8.0
- Application:
	- Maintenance: dependency update (numpy 1.26.3 => 2.1.2, pyarrow 15.0.0 => 17.0.0, openpyxl 3.1.0 => 3.1.5).
	- Maintenance: dependency update (pandas 2.2.0 => 2.2.3, requests 2.31.0 => 2.32.3, coverage 7.6.1 => 7.6.4).
	- Maintenance: dependency update (jupyter 1.0.0 => 1.1.0, nwshared 1.4.0 => 1.6.0, nwpackageversions 1.0.0 => 1.2.0).
	- Refactoring: previous two "check" cells combined into one ("Language/Requirement Checks").
- Documentation:
	- Feature: updated to v3.8.0.

v3.7.0
- Application:
	- Feature: expanded the use of DisplayPreProcessor in the notebook.
	- Feature: added support for MarkdownProcessor.
	- Maintenance: nwshared updated (1.3.0 => 1.4.0).
	- Maintenance: Dockerfile updated (coverage 7.2.3 => 7.6.1, added support for pandoc 3.4.1).	