@@ -143,7 +143,8 @@ The avalaible target names are:
 | type-verbose | Runs a type verification task and logs everything. |
 | coverage-verbose | Runs a unit test coverage calculation task and logs the % per class. |
 | tryinstall-verbose | Simulates a "pip install" and logs everything. |
-| compile-verbose | Runs "python" command against the module file. |
+| compile-verbose | Runs "python -m py_compile" command against the module file. |
+| compilenotebook-verbose | Runs "python -m py_compile" command against the notebook file. |
 | unittest-verbose | Runs "python" command against the test files. |
 | codemetrics-verbose | Runs a cyclomatic complexity analysis against all the nw*.py files in /src. |
 | commitavg-verbose | Shows the daily average time between commits, grouped by year and month. |
@@ -163,7 +164,8 @@ COVERAGE_THRESHOLD: 70%
 [OK] setup-concise: 'setup.py' updated to current version!
 [OK] coverage-concise: unit test coverage >= 70%.
 [OK] compile-concise: compiling the library throws no issues.
-[OK] unittest-concise: '268' tests found and run.
+[OK] compilenotebook-concise: compiling the notebook throws no issues.
+[OK] unittest-concise: '315' tests found and run.
 [OK] codemetrics-concise: the cyclomatic complexity is excellent ('A').
 [OK] tryinstall-concise: installation process works.
 ```
