@@ -1,5 +1,5 @@
 # SETTINGS
-.PHONY: clear makefile-info type-concise changelog-concise setup-concise coverage-concise tryinstall-concise compile-concise unittest-concise codemetrics-concise all-concise 
+.PHONY: clear makefile-info type-concise changelog-concise setup-concise coverage-concise tryinstall-concise compile-concise compilenotebook-concise unittest-concise codemetrics-concise all-concise 
 SHELL := /bin/bash
 ROOT_DIR := $(shell cd .. && pwd)
 MODULE_NAME = "nwtimetracking"
@@ -46,6 +46,11 @@ tryinstall-verbose:
 compile-verbose:
 	@clear; \
 	python -m py_compile $(ROOT_DIR)/src/$(MODULE_NAME).py;
+compilenotebook-verbose:
+	@clear; \
+	jupyter nbconvert --to script $(ROOT_DIR)/src/$(MODULE_NAME).ipynb --output /home/nbconvert; \
+	python -m py_compile /home/nbconvert.py; \
+	rm /home/nbconvert.py;
 unittest-verbose:
 	@clear; \
 	python $(ROOT_DIR)/tests/$(MODULE_NAME)tests.py;
@@ -99,6 +104,12 @@ compile-concise:
 	@value=$$(python -m py_compile $(ROOT_DIR)/src/$(MODULE_NAME).py 2>&1); \
 	if [ -z "$${value}" ]; then value=0; else value=1; fi; \
 	if [ $$value -eq 0 ]; then echo "[OK] $@: compiling the library throws no issues."; else echo "[WARNING] $@: compiling the library throws some issues."; fi;
+compilenotebook-concise:
+	@jupyter nbconvert --to script $(ROOT_DIR)/src/$(MODULE_NAME).ipynb --output /home/nbconvert > /dev/null 2>&1; \
+	value=$$(python -m py_compile /home/nbconvert.py 2>&1); \
+	rm /home/nbconvert.py; \
+	if [ -z "$${value}" ]; then value=0; else value=1; fi; \
+	if [ $$value -eq 0 ]; then echo "[OK] $@: compiling the notebook throws no issues."; else echo "[WARNING] $@: compiling the notebook throws some issues."; fi;
 unittest-concise:
 	@value=$$(python $(ROOT_DIR)/tests/$(MODULE_NAME)tests.py 2>&1 | grep -oP '(?<=Ran )\d+(?= tests)'); \
 	if [ -z "$${value}" ]; then value=0; fi; \
@@ -108,4 +119,4 @@ codemetrics-concise:
 	if [[ "$$value" == *"A"* ]]; then echo "[OK] $@: the cyclomatic complexity is excellent ('$$value')."; else echo "[WARNING] $@: the cyclomatic complexity is not excellent ('$$value')"; fi;
 
 # TARGETS (AGGREGATE)
-all-concise: clear makefile-info type-concise changelog-concise setup-concise coverage-concise compile-concise unittest-concise codemetrics-concise tryinstall-concise
+all-concise: clear makefile-info type-concise changelog-concise setup-concise coverage-concise compile-concise compilenotebook-concise unittest-concise codemetrics-concise tryinstall-concise
